@@ -446,3 +446,88 @@ data.raw["resource"]["pm-alkaline-earth-metals"].minable =
   }
 }
 end
+
+{
+    type = "technology",
+    name = "pm-speed-module-5",
+    icon_size = 256,
+    icon = "__periodic-madness__/graphics/technology/speed-module-5-tech.png",
+    effects =
+    {
+      PM.unlock_recipe("pm-speed-module-5")
+    },
+    prerequisites = {"pm-speed-module-4", "pm-advanced-advanced-transition-metal-pack-unlock", "pm-alkaline-earth-metal-pack-unlock"},
+    unit =
+    {
+      count = 1200,
+      ingredients =
+      {
+        {"automation-science-pack", 1},
+        {"logistic-science-pack", 1},
+        {"pm-advanced-advanced-transition-metal-science-pack", 1},
+        {"chemical-science-pack", 1},
+        {"pm-post-transition-metal-science-pack", 1},
+        {"pm-alkali-metal-science-pack", 1},
+        {"pm-metalloid-science-pack", 1},
+        {"pm-alkaline-earth-metal-science-pack", 1},
+        {"pm-advanced-advanced-advanced-transition-metal-science-pack", 1}
+      },
+      time = 100
+    }
+  },
+  {
+    type = "technology",
+    name = "pm-efficiency-module-5",
+    icon_size = 256,
+    icon = "__periodic-madness__/graphics/technology/efficiency-module-5-tech.png",
+    effects =
+    {
+      PM.unlock_recipe("pm-efficiency-module-5")
+    },
+    prerequisites = {"pm-efficiency-module-4", "pm-advanced-advanced-transition-metal-pack-unlock", "pm-alkaline-earth-metal-pack-unlock"},
+    unit =
+    {
+      count = 1200,
+      ingredients =
+      {
+        {"automation-science-pack", 1},
+        {"logistic-science-pack", 1},
+        {"pm-advanced-advanced-transition-metal-science-pack", 1},
+        {"chemical-science-pack", 1},
+        {"pm-post-transition-metal-science-pack", 1},
+        {"pm-alkali-metal-science-pack", 1},
+        {"pm-metalloid-science-pack", 1},
+        {"pm-alkaline-earth-metal-science-pack", 1},
+        {"pm-advanced-advanced-advanced-transition-metal-science-pack", 1}
+      },
+      time = 100
+    }
+  },
+  {
+    type = "technology",
+    name = "pm-productivity-module-5",
+    icon_size = 256,
+    icon = "__periodic-madness__/graphics/technology/productivity-module-5-tech.png",
+    effects =
+    {
+      PM.unlock_recipe("pm-productivity-module-5")
+    },
+    prerequisites = {"pm-productivity-module-4", "pm-advanced-advanced-transition-metal-pack-unlock", "pm-alkaline-earth-metal-pack-unlock"},
+    unit =
+    {
+      count = 1200,
+      ingredients =
+      {
+        {"automation-science-pack", 1},
+        {"logistic-science-pack", 1},
+        {"pm-advanced-advanced-transition-metal-science-pack", 1},
+        {"chemical-science-pack", 1},
+        {"pm-post-transition-metal-science-pack", 1},
+        {"pm-alkali-metal-science-pack", 1},
+        {"pm-metalloid-science-pack", 1},
+        {"pm-alkaline-earth-metal-science-pack", 1},
+        {"pm-advanced-advanced-advanced-transition-metal-science-pack", 1}
+      },
+      time = 100
+    }
+  },
