@@ -52,6 +52,8 @@ Date: 2025-12-07
     - Lowered tungsten heating coils energy consumption from 100% to 75%.
     - Added borax to molten ore slags recipe chain.
     - Lowered amount of quartzite given from advanced iron processing.
+    - Reworked where modules are unlocked, so that the first 2 tiers are unlocked at RNM/P-TM science, while tier 3 is the same and tier 4 is unlocked at AEM/AA-ATM science, and every subsequent module tier will be 1 per pack.
+    - Changed tier 4 modules to use special lights, as they were meant to do ages ago.
 
   Fixes:
     - Fixed the tech icons of all battery equipment.
